@@ -113,29 +113,29 @@ class CSSValueTestCase(basetest.BaseTestCase):
             u'0': u'0',
             u'0.0': u'0',
             u'00': u'0',
-            u'0%': u'0',
+            u'0%': u'0%',
             u'0px': u'0',
             u'-.0': u'0',
             u'-0': u'0',
             u'-0.0': u'0',
             u'-00': u'0',
-            u'-0%': u'0',
+            u'-0%': u'0%',
             u'-0px': u'0',
             u'+.0': u'0',
             u'+0': u'0',
             u'+0.0': u'0',
             u'+00': u'0',
-            u'+0%': u'0',
+            u'+0%': u'0%',
             u'+0px': u'0',
             u'1': u'1',
-            u'1.0': u'1.0',
+            u'1.0': u'1',
             u'1px': u'1px',
             u'1%': u'1%',
             u'1px1': u'1px1',
             u'+1': u'1',
             u'-1': u'-1',
-            u'+1.0': u'1.0',
-            u'-1.0': u'-1.0',
+            u'+1.0': u'1',
+            u'-1.0': u'-1',
             # RGBColor
             u'#112234': u'#112234',
             u'#112233': u'#123',
